--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		<li>DevOpsとセキュリティ</li>
 		<li>コンテナに関連したセキュリティニュース</li>
 		<li>コンテナのセキュリティフレームワーク</li>
-		<li>Prisma Cloud主要機能の紹介</li>
-		<li>Security ControllableなCI/CDパイプライン</li>
+		<li>Prisma Cloudの紹介</li>
+		<li>demo</li>
 	</ul>
 	
 	  
