--- a/index.html
+++ b/index.html
@@ -17,15 +17,12 @@
     </div>
   </div>
   <div id="contents">
-     <h1>Ver20.09</h1>	  
 	
      <h3>今日のアジェンダ</h3>
 	<ul>
-		<li>コンテナの特性</li>
-		<li>DevOpsとセキュリティ</li>
-		<li>コンテナに関連したセキュリティニュース</li>
-		<li>コンテナのセキュリティフレームワーク</li>
-		<li>Prisma Cloudの紹介</li>
+		<li>コンテナによる開発の効率化</li>
+		<li>コンテナのセキュリティ</li>
+		<li>Prisma Cloud が提供するコンテナセキュリティ</li>
 		<li>demo</li>
 	</ul>
 	  
