--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 		<li>Prisma Cloud が提供するコンテナセキュリティ</li>
 		<li>demo</li>
 	</ul>
-	  
-	  <img src="https://www.macnica.net/image/devops_blog_20200409_1_draw01.png" width=500>
-	  
+	  <!--
+	  <img src="macnicadevops.png" width=500>
+	  -->
   </div>
 
 </br></br></br>
-<div id="footer">© 2020 Macnica Networks</div>
+<div id="footer">©Macnica, Inc.</div>
 </div>
 </body>
 </html>
